# markon

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  MIGRATION_PLAN.md  NOTICE  README.md  README.zh.md  RELEASE.md  RELEASE.zh.md  REVERSE_PROXY.md  REVERSE_PROXY.zh.md  TEST.md  eslint.config.js  package-lock.json  package.json  test_mermaid.md  tsconfig.json  vitest.config.js
.cargo/: config.toml
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: auto-promote.yml  auto-rc.yml  ci.yml  docs.yml  promote.yml  release.yml
Casks/: markon.rb
assets/brand/: variants.toml
assets/css/: editor.css  github-markdown-dark.css  github-markdown-light.css  github-print-minimal.css  (+1 more)
bucket/: markon.json
crates/cli/: Cargo.toml
crates/cli/src/: feedback.rs  main.rs
crates/cli/src/tui/: ls.rs  mod.rs
crates/core/: Cargo.toml  build.rs
crates/core/assets/css/: chat.css  collaboration.css  editor.css  github-markdown-dark.css  github-print-minimal.css  github-print.css  shortcuts.css  tokens.css
crates/core/assets/js/: access-gate.ts  admin-bootstrap.ts  admin-session-boot.test.ts  admin-session-boot.ts  diff-annotations.test.ts  diff-annotations.ts  diff-controls.ts  diff-file-create.ts  diff-file-header.test.ts  diff-file-header.ts  diff-new-side-filter.test.ts  diff-new-side-filter.ts  diff-ref-picker.test.ts  diff-ref-picker.ts  diff-section-view.ts  diff-segments.test.ts  diff-segments.ts  diff-shortcuts.ts  directory.ts  editor-codemirror.ts  git-refs.ts  layout-page.ts  main.js  main.test.ts  main.ts  markdown-diff.test.ts  markdown-diff.ts  math-render.ts  page-shortcuts.ts  viewed.js  viewed.test.ts  viewed.ts  workspace-diff.ts
crates/core/assets/js/components/: draggable.js  draggable.test.ts  draggable.ts  floating-layer.test.ts  floating-layer.ts  layout-engine.test.ts  layout-engine.ts  modal.js  modal.test.ts  modal.ts  shortcuts-help.ts  workspace-spotlight.test.ts  workspace-spotlight.ts
crates/core/assets/js/core/: admin-actions.test.ts  admin-actions.ts  clipboard.ts  config.js  config.test.ts  config.ts  download.ts  identity.test.ts  identity.ts  notifications.test.ts  notifications.ts  routes.test.ts  routes.ts  utils.js  utils.test.ts  utils.ts
crates/core/assets/js/managers/: annotation-manager.js  annotation-manager.test.ts  annotation-manager.ts  chat-manager.js  chat-manager.test.ts  chat-manager.ts  collaboration-manager.js  collaboration-manager.test.ts  collaboration-manager.ts  editor-manager.js  editor-manager.test.ts  editor-manager.ts  export-manager.test.ts  export-manager.ts  highlight-manager.test.ts  highlight-manager.ts  keyboard-shortcuts.js  keyboard-shortcuts.test.ts  keyboard-shortcuts.ts  note-manager.js  note-manager.test.ts  note-manager.ts  popover-manager.js  popover-manager.test.ts  popover-manager.ts  search-manager.js  search-manager.test.ts  search-manager.ts  storage-manager.js  storage-manager.test.ts  storage-manager.ts  undo-manager.js  undo-manager.test.ts  undo-manager.ts  visual-zoom-manager.test.ts  visual-zoom-manager.ts  websocket-manager.js  websocket-manager.test.ts  websocket-manager.ts
crates/core/assets/js/navigators/: annotation-navigator.test.ts  annotation-navigator.ts  toc-navigator.js  toc-navigator.test.ts  toc-navigator.ts
crates/core/assets/js/services/: annotation-sync.test.ts  annotation-sync.ts  annotation-target.test.ts  annotation-target.ts  dom.js  dom.test.ts  dom.ts  layout.js  layout.test.ts  layout.ts  note-link.test.ts  note-link.ts  position.js  position.test.ts  position.ts  text-anchor.test.ts  text-anchor.ts  text.js  text.test.ts  text.ts  union-find.test.ts  union-find.ts  xpath.js  xpath.test.ts  xpath.ts
crates/core/assets/js/test/: setup.ts
crates/core/assets/js/types/: ambient.d.ts
crates/core/assets/templates/: access-gate.html  admin-bootstrap.html  admin-session-boot.html  chat.html  directory.html  file-view.html  git-diff.html  git-history.html  git-refs.html  i18n-boot.html  layout.html  theme-boot.html
crates/core/i18n/: en.json5  ja.json5  zh_CN.json5
crates/core/src/: admin_auth.rs  assets.rs  control.rs  daemon.rs  data_maintenance.rs  fswalk.rs  git.rs  i18n.rs  lib.rs  markdown.rs  markdown_ast.rs  net.rs  search.rs  server.rs  settings.rs  workspace.rs  workspace_fs.rs
crates/core/src/chat/: agent.rs  api.rs  config.rs  edits.rs  message.rs  mod.rs  models.rs  prompt.rs  routes.rs  storage.rs
crates/core/src/chat/provider/: anthropic.rs  mod.rs  openai.rs
crates/core/src/chat/tools/: edit_file.rs  glob_search.rs  grep.rs  list_dir.rs  mod.rs  read_file.rs
crates/core/src/control/: mod.rs  proto.rs  tests.rs  transport.rs
crates/core/src/syntaxes/: Protocol Buffer.sublime-syntax
crates/core/tests/: example_workspace_fixture_test.rs  search_integration_test.rs
crates/core/tests/js/: dom-xpath.test.js  text.test.js  undo-manager.test.js  union-find.test.js
crates/gui/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.sidecar.conf.json
crates/gui/capabilities/: default.json
crates/gui/icons/: icon.icns  tray-colored.png.README
crates/gui/nsis/: file-association.nsh
crates/gui/src/: commands.rs  main.rs  reopen_origin.rs  server_manager.rs  service.rs  settings.rs
crates/gui/tests/js/: i18n.test.js
crates/gui/ui/: en.i18n.json5  i18n.js  index.html  zh_CN.i18n.json5
crates/markond/: Cargo.toml
crates/markond/src/: main.rs
docs/: faq.md  index.md  package.json  print-debug-guide.md  print-functionality-mobile-fix.md  print-new-window-solution.md
example/: README.md  e2e-manifest.json
i18n/: en.json5  ja.json5  zh_CN.json5
scripts/: build-dmg.sh  build.mjs  bump-version.sh  check-graphviz-link-policy.sh  dev-gui.sh  macos-bundle-graphviz.sh  prepare-macos-graphviz-framework.sh  publish-crates.sh  quality-gate.sh  windows-register-context-menu.ps1
src/: assets.rs  lib.rs  main.rs  markdown.rs  search.rs  server.rs
test-data/: architecture-section.md
test_subdir/: SUBTEST.md
tests/: search_integration_test.rs
(+90 files in other folders)
