[workspace]
members = ["crates/core", "crates/cli", "crates/gui"]
resolver = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"

[workspace.dependencies]
markon-core = { path = "crates/core", version = "0.9" }

[workspace.package]
version = "0.9.1"
edition = "2021"
authors = ["kookyleo"]
license = "Apache-2.0"
repository = "https://github.com/kookyleo/markon"
homepage = "https://github.com/kookyleo/markon"
