[workspace]
members = ["crates/core", "crates/cli", "crates/gui", "crates/xtask"]
# xtask is a build-time helper (icon generation etc.) — exclude it from the
# default workspace so `cargo build` / `cargo test` do not pull in resvg and
# friends. Run it explicitly via the `cargo xtask …` alias in .cargo/config.toml.
default-members = ["crates/core", "crates/cli", "crates/gui"]
resolver = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"

[workspace.dependencies]
markon-core = { path = "crates/core", version = "0.9" }
dunce = "1.0"

[workspace.package]
version = "0.9.22"
edition = "2021"
authors = ["kookyleo"]
license = "Apache-2.0"
repository = "https://github.com/kookyleo/markon"
homepage = "https://github.com/kookyleo/markon"
