[package]
name = "markon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "markon - Turn your markdown on."
keywords = ["markdown", "renderer", "github", "annotation"]
categories = ["command-line-utilities", "text-processing"]
readme = "../../README.md"

[[bin]]
name = "markon"
path = "src/main.rs"

[dependencies]
markon-core.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.11"
local-ip-address = "0.6"
tokio = { version = "1.52.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "5"
dunce.workspace = true
