[package]
name = "markon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "markon - Mark it on."
keywords = ["markdown", "renderer", "github", "annotation"]
categories = ["command-line-utilities", "text-processing"]
readme = "../../README.md"

[[bin]]
name = "markon"
path = "src/main.rs"

[dependencies]
markon-core.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.28"
dialoguer = "0.11"
tokio = { version = "1.52.1", features = ["full"] }
serde_json = "1.0"
open = "5"
dunce.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
