[package]
name = "markon-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "markon core - Turn your markdown on."
keywords = ["markdown", "preview", "github", "mermaid", "toc"]
categories = ["command-line-utilities", "text-processing", "web-programming"]

[lib]
name = "markon_core"
path = "src/lib.rs"

[dependencies]
tantivy = "0.25"
tantivy-jieba = "0.17"
rusqlite = { version = "0.37.0", features = ["bundled", "limits"] }
axum = { version = "0.8.6", features = ["ws"] }
futures-util = "0.3.31"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1"
log = "0.4.28"
uuid = { version = "1.18.1", features = ["v4"] }
pulldown-cmark = "0.13.0"
syntect = "5.3.0"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-embed = "8.8.0"
tera = "1.20.0"
emojis = "0.7.2"
regex = "1.12.2"
lazy_static = "1.5.0"
html-escape = "0.2.13"
urlencoding = "2.1.3"
qr2term = "0.3.3"
qrcode = "0.14.1"
open = "5.3.2"
dirs = "6.0.0"
dunce.workspace = true
walkdir = "2.5.0"
notify = "6.1.1"
sys-locale = "0.3"
sha2 = "0.10"
mime_guess = "2.0"
rayon = "1.10"
arc-swap = "1.7"

[dev-dependencies]
tempfile = "3.17"
