[package]
name = "markon-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "markon core - Mark it on."
keywords = ["markdown", "preview", "github", "diagram", "toc"]
categories = ["command-line-utilities", "text-processing", "web-programming"]
# Explicit package contents. `include` ignores .gitignore, so the generated
# frontend bundle under assets/dist/ (gitignored, produced by `npm run build`)
# is shipped in the published crate — it is embedded at compile time by
# `rust_embed` in src/assets.rs, so consumers of `cargo install` (who have no
# Node toolchain) need it inside the tarball. This list must cover everything
# the crate needs to compile standalone: sources, build.rs, the i18n files
# build.rs reads, and all four rust_embed asset folders.
include = [
    "src/**/*.rs",
    "build.rs",
    "Cargo.toml",
    "i18n/**/*.json5",
    "assets/css/**/*",
    "assets/dist/**/*",
    "assets/icons/**/*",
    "assets/templates/**/*",
]

[lib]
name = "markon_core"
path = "src/lib.rs"

[dependencies]
tantivy = "0.25"
tantivy-jieba = "0.17"
rusqlite = { version = "0.37.0", features = ["bundled", "limits"] }
axum = { version = "0.8.9", features = ["ws"] }
futures-util = "0.3.32"
futures = "0.3.32"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
log = "0.4.29"
uuid = { version = "1.23.1", features = ["v4"] }
syntect = "5.3.0"
# Extended syntax set bundled from bat's ~200 Sublime grammars. Pinned to a
# version built against syntect 5.3.0 so Cargo unifies on a single syntect.
two-face = "0.5.1"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tower = { version = "0.5", features = ["util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-embed = "8.11.0"
tera = "1.20.1"
emojis = "0.7.2"
regex = "1.12.3"
lazy_static = "1.5.0"
html-escape = "0.2.13"
urlencoding = "2.1.3"
qr2term = "0.3.3"
qrcode = "0.14.1"
open = "5.3.4"
dirs = "6.0.0"
dunce.workspace = true
local-ip-address.workspace = true
walkdir = "2.5.0"
notify = "6.1.1"
sys-locale = "0.3"
sha2 = "0.10"
hmac = "0.12"
getrandom = "0.3"
mime_guess = "2.0"
rayon = "1.12"
arc-swap = "1.9"
cap-std = "4.0"
ignore = "0.4"
globset = "0.4"
similar = "2.7"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
bytes = "1"
async-trait = "0.1"
thiserror = "2"
tracing.workspace = true
# Cross-platform local IPC for the control plane (Unix domain socket / Windows
# named pipe) driving the admin/management protocol. The `tokio` feature pulls
# in the async LocalSocket listener + stream; framing is layered on top with
# tokio-util's LengthDelimitedCodec.
interprocess = { version = "2", features = ["tokio"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dependencies.supramark-markdown]
version = "0.1.2"
default-features = false
features = [
    "commonmark",
    "gfm",
    "diagram",
    "container",
    "input",
    "math",
    "footnote",
    "definition-list",
    "raw-html",
]

[dependencies.supramark-diagram]
version = "0.1.4"

[dev-dependencies]
tempfile = "3.27"
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.29"
