[package]
name = "markon-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "markon desktop - Turn your markdown on."
publish = false

[[bin]]
name = "markon-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
markon-core.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["sync"] }
dirs = "6.0.0"
open = "5.3.2"
sys-locale = "0.3"
rfd = "0.15"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
url = "2"
font-kit = "0.14"
dunce.workspace = true
