[package]
name = "markon-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "markon desktop - Mark it on."
publish = false

[[bin]]
name = "markon-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
markon-core.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.1", features = ["sync"] }
dirs = "6.0.0"
open = "5.3.4"
sys-locale = "0.3"
rfd = { version = "0.17", default-features = false, features = ["xdg-portal"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
url = "2"
font-kit = "0.14"
dunce.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# objc2: read the reopen Apple Event's sender (keySenderPIDAttr) so only a real
# Finder-toolbar click adopts the front Finder folder — not Dock/Spotlight
# reactivations. See crates/gui/src/reopen_origin.rs.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

# Raw Win32 for SetIcon — Tauri's set_icon path goes through winit with a
# single scaled PNG, which bilinears horribly into the 16 px titlebar slot.
# WM_SETICON with LoadImage from the .exe resource lets Windows pick the
# exact-size raster from our multi-slot icon.ico instead.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }
