[package]
name = "markond"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "markond - the Markon background service."
keywords = ["markdown", "renderer", "daemon", "server"]
categories = ["command-line-utilities", "web-programming"]
readme = "../../README.md"

[[bin]]
name = "markond"
path = "src/main.rs"

[dependencies]
markon-core.workspace = true
tokio = { version = "1.52.1", features = ["full"] }
serde_json = "1.0"
dirs = "6.0.0"
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3.27"
